<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:weightSum="10"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context="com.lengwemushimba.intercityticketbooking.EditUserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.6"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPurple"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/pureWhite"
        android:elevation="4dp">

    </android.support.v7.widget.Toolbar>


    <ImageView
        android:background="@color/colorGray2"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewA"
        />
    <TextView
        android:id="@+id/job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Job Title"
        android:textSize="23sp"
        android:textColor="@color/pureWhite"
        android:elevation="6dp"
        android:layout_gravity="bottom|left"
        android:background="#7f000000"
        android:padding="6dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        />

</FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewB"
            android:layout_weight="0.4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/pureWhite">

                <LinearLayout
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/firstNameParent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="0.5"
                        android:textColorHint="@color/lightGray">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/firstNameChild"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/firstName"
                            android:inputType="textPersonName"
                            android:text="Lengwe"
                            android:textColor="@color/darkGray"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/lastNameParent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="0.5"
                        android:textColorHint="@color/lightGray"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/lastNameChild"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lastName"
                            android:inputType="textEmailAddress"
                            android:text="Mushimba"
                            android:textColor="@color/darkGray"
                            />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColorHint="@color/lightGray"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/emailChild"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="Lengwe@gmail.com"
                        android:textColor="@color/darkGray"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phoneParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColorHint="@color/lightGray"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phoneChild"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:text="+260 945568734"
                        android:textColor="@color/darkGray"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/lightGray"
                    android:textColorHint="@color/lightGray"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordChild"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/darkGray"
                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:textColor="@color/pureWhite"
                    android:onClick="editProfile"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/lightGray"
                    />


            </LinearLayout>

        </ScrollView>
        <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/bnve"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPurple"
            app:itemIconTint="@color/selector_item_gray_color"
            app:itemTextColor="@color/selector_item_gray_color"
            app:menu="@menu/bottom_navigation_menu">

        </com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:onClick="setProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editProfileFab"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/add_a_photo"
        android:backgroundTint="#ff268f"
        app:layout_anchor="@id/viewA"
        app:layout_anchorGravity="bottom|right"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        />




</android.support.design.widget.CoordinatorLayout>
